--- a/nav_header_no_auth.html
+++ b/nav_header_no_auth.html
@@ -1,11 +1,41 @@
-<nav id="ceb_nav_header">
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cabecera CBE</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>*:focus { outline: inherit !important; }</style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+</head>
+<body>
 
-    <div id="navbar-burger"></div>
-    <div id="navbar-logo"></div>
-    <div id="navbar-header-course"></div>
-    <div id="navbar-auto"></div>
-    <div id="navbar-lang"></div>
-    <div id="navbar-menu-apps"></div>
-    <div id="navbar-usernav"></div>
+    <!-- API ENDPOINT NAV *** -->
+    <nav id="ceb_nav_header" style="
+            font-family: 'Montserrat', sans-serif;
+            height: 74px;
+            max-height: 74px;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            align-items: center;
+            box-shadow: 0 2px 4px #00000014;
+            border-bottom: 1px solid #262626;">
 
-</nav>
+        <!-- NAVBAR-LOGO -->
+        <div id="navbar-logo" style="margin-left: 32px; cursor: pointer">
+            <img src="./images/logo.png" alt="" style="height: 60px;">
+        </div>
+
+    </nav>
+    <!-- API ENDPOINT NAV *** -->
+
+</body>
+</html>
